objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Position_Industry__c</fullName>
        <label>Position Industry</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting/Finance</fullName>
                </value>
                <value>
                    <fullName>Advertising/PR/MR/Events</fullName>
                </value>
                <value>
                    <fullName>Agriculture/Dairy</fullName>
                </value>
                <value>
                    <fullName>Animation</fullName>
                </value>
                <value>
                    <fullName>Architecture/Interior Designing</fullName>
                </value>
                <value>
                    <fullName>Auto/Auto Ancillary</fullName>
                </value>
                <value>
                    <fullName>Aviation / Aerospace Firms</fullName>
                </value>
                <value>
                    <fullName>Banking/Financial</fullName>
                </value>
                <value>
                    <fullName>Services/Broking</fullName>
                </value>
                <value>
                    <fullName>BPO/ITES</fullName>
                </value>
                <value>
                    <fullName>Brewery / Distillery</fullName>
                </value>
                <value>
                    <fullName>Ceramics /Sanitary ware</fullName>
                </value>
                <value>
                    <fullName>Chemicals/PetroChemical/Plastic/Rubber</fullName>
                </value>
                <value>
                    <fullName>Construction/Engineering/Cement/Metals</fullName>
                </value>
                <value>
                    <fullName>Consumer Durables</fullName>
                </value>
                <value>
                    <fullName>Courier/Transportation/Freight</fullName>
                </value>
                <value>
                    <fullName>Defence/Government</fullName>
                </value>
                <value>
                    <fullName>Education/Teaching/Training</fullName>
                </value>
                <value>
                    <fullName>Electricals / Switchgears</fullName>
                </value>
                <value>
                    <fullName>Export/Import</fullName>
                </value>
                <value>
                    <fullName>Facility Management</fullName>
                </value>
                <value>
                    <fullName>Fertilizers/Pesticides</fullName>
                </value>
                <value>
                    <fullName>FMCG/Foods/Beverage</fullName>
                </value>
                <value>
                    <fullName>Food Processing</fullName>
                </value>
                <value>
                    <fullName>Fresher/Trainee</fullName>
                </value>
                <value>
                    <fullName>Gems and Jewellery</fullName>
                </value>
                <value>
                    <fullName>Glass</fullName>
                </value>
                <value>
                    <fullName>Heat Ventilation Air Conditioning</fullName>
                </value>
                <value>
                    <fullName>Hotels/Restaurants/Airlines/Travel</fullName>
                </value>
                <value>
                    <fullName>Industrial Products/Heavy Machinery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Position_Job_Type__c</fullName>
        <label>Position Job Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full Time</fullName>
                </value>
                <value>
                    <fullName>Part Time</fullName>
                </value>
                <value>
                    <fullName>Internship</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_List_Rate__c</fullName>
        <label>Product List Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reporting_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reporting Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time_for_feedback__c</fullName>
        <inlineHelpText>How long will it take to deliver feedback on a resume?</inlineHelpText>
        <label>Time for feedback</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Allowed_to_work_OT__c</fullName>
        <label>Allowed to work OT?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_Recruiter__c</fullName>
        <label>Assigned Recruiter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Patrick Coggins</fullName>
                </value>
                <value>
                    <fullName>Rahul Merani</fullName>
                </value>
                <value>
                    <fullName>Lajja Shah</fullName>
                </value>
                <value>
                    <fullName>Jinu Philip</fullName>
                </value>
                <value>
                    <fullName>Tom Jacob</fullName>
                </value>
                <value>
                    <fullName>Sreepriya Sundaresan</fullName>
                </value>
                <value>
                    <fullName>Tracey Laubsted</fullName>
                </value>
                <value>
                    <fullName>External Referral</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Dee</fullName>
                    <isActive>false</isActive>
                    <label>Dee</label>
                </value>
                <value>
                    <fullName>Deidre Holguin</fullName>
                    <isActive>false</isActive>
                    <label>Deidre Holguin</label>
                </value>
                <value>
                    <fullName>Patrick</fullName>
                    <isActive>false</isActive>
                    <label>Patrick</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Candidate_Sourcing__c</fullName>
        <label>Candidate Sourcing</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Job_Order_Sourcing__c</fullName>
        <label>Job Order Sourcing</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Opening__c</fullName>
        <inlineHelpText>Reason for Opening</inlineHelpText>
        <label>Reason for Opening</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Selling_Attributes__c</fullName>
        <label>Selling Attributes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Conversion_Timeline__c</fullName>
        <inlineHelpText>If the candidate performs good work when will you considering converting them?</inlineHelpText>
        <label>Conversion Timeline</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <inlineHelpText>Project Description</inlineHelpText>
        <label>Project Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Candidate_Management__c</fullName>
        <label>Candidate Management</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Client_Sales_Contact__c</fullName>
        <label>Client Sales Contact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rahul Merani</fullName>
                </value>
                <value>
                    <fullName>Patrick Coggins</fullName>
                </value>
                <value>
                    <fullName>Lajja Shah</fullName>
                </value>
                <value>
                    <fullName>Deidre Holguin</fullName>
                    <isActive>false</isActive>
                    <label>Deidre Holguin</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Signed_Date__c</fullName>
        <label>Contract Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fee_Agreement_Status__c</fullName>
        <label>Fee Agreement Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Signed</fullName>
                </value>
                <value>
                    <fullName>Not Signed</fullName>
                </value>
                <value>
                    <fullName>Negotiating</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Position_Minimum_CTC__c</fullName>
        <label>Position Minimum CTC</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telecommuting_Policy__c</fullName>
        <inlineHelpText>Do you allow for telecommuting?  What’s the policy?</inlineHelpText>
        <label>Telecommuting Policy</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Career_Growth_Outlook__c</fullName>
        <inlineHelpText>What does career growth look like in your department?</inlineHelpText>
        <label>Career Growth Outlook</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Invoice_Copy_To__c</fullName>
        <label>Email Invoice Copy To</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Published_Description__c</fullName>
        <inlineHelpText>Published Description:  (pushed out to Job Boards)</inlineHelpText>
        <label>Published Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Culture_of_the_company__c</fullName>
        <inlineHelpText>Can you describe the culture of this group and company and how closely you’d like the candidate to align with it?</inlineHelpText>
        <label>Culture of the company</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interview_process_time__c</fullName>
        <inlineHelpText>How long do you expect the entire interview process to take?</inlineHelpText>
        <label>Interview process time</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Skills_Software_needed__c</fullName>
        <inlineHelpText>What skills / software does this person need to have?</inlineHelpText>
        <label>Skills / Software needed</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Background_Check_Needed__c</fullName>
        <label>Background Check Needed?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description_of_the_Work__c</fullName>
        <label>Description of the Work</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employee_Average_Tenure__c</fullName>
        <inlineHelpText>What’s the average tenure of the employees in this group?</inlineHelpText>
        <label>Employee Average Tenure</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Estimated_profitability__c</fullName>
        <label>Estimated profitability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Internal_Person_Sourced__c</fullName>
        <label>Internal Person Sourced</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rahul</fullName>
                </value>
                <value>
                    <fullName>Patrick</fullName>
                </value>
                <value>
                    <fullName>Dee Dee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vacation_accrual_policy__c</fullName>
        <inlineHelpText>Vacation accrual policy?</inlineHelpText>
        <label>Vacation accrual policy</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_s_been_done_so_far__c</fullName>
        <inlineHelpText>What’s been done so far?</inlineHelpText>
        <label>What’s been done so far?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fee_Agreement_Percentage__c</fullName>
        <label>Fee Agreement Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Guarantee_Satisfied_Date__c</fullName>
        <label>Guarantee Satisfied Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Position_Job_Description__c</fullName>
        <label>Position Job Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Completion_Bonus_picklist__c</fullName>
        <label>Completion Bonus?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Identify_key_stakeholders__c</fullName>
        <inlineHelpText>Who are the important stakeholders and their respective roles / interests in seeing this work get done?</inlineHelpText>
        <label>Identify key stakeholders</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Position_Responsibilities__c</fullName>
        <label>Position Responsibilities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pricing_Index_Direct_Hire__c</fullName>
        <label>Pricing Index (Direct Hire)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Executive / C-Suite Fee:  30-35%</fullName>
                </value>
                <value>
                    <fullName>Non-Executive:  25-30%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reference_Checking_Status__c</fullName>
        <label>Reference Checking Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Client Checking</fullName>
                </value>
                <value>
                    <fullName>Checking References</fullName>
                </value>
                <value>
                    <fullName>References Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_will_they_use_it_for__c</fullName>
        <inlineHelpText>What will they use it for?</inlineHelpText>
        <label>What will they use it for?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yet to begin</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Public_Accounting_Required__c</fullName>
        <label>Public Accounting Required?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Required</fullName>
                </value>
                <value>
                    <fullName>Preferred</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Reporting_Template_To__c</fullName>
        <label>Email Reporting Template To</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Expectations_of_Performance__c</fullName>
        <inlineHelpText>What are your expectations of this person in the first 6 months?</inlineHelpText>
        <label>Expectations of Performance</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_many_people_do_you_need__c</fullName>
        <inlineHelpText>How many people do you need?</inlineHelpText>
        <label>How many people do you need?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Position_Minimum_Experience__c</fullName>
        <label>Position Minimum Experience</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Select</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Why_do_you_need_this_person__c</fullName>
        <inlineHelpText>lack of expertise or capacity</inlineHelpText>
        <label>Why do you need this person ?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>capacity_to_review_the_work__c</fullName>
        <inlineHelpText>Do you have capacity to review the work and answer questions?</inlineHelpText>
        <label>Capacity to review the work</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_s_mission_or_purpose__c</fullName>
        <inlineHelpText>Tell me about the company’s mission or purpose / what makes them different?</inlineHelpText>
        <label>Company’s mission or purpose</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_state_of_the_deliverable__c</fullName>
        <inlineHelpText>What’s the end state of the deliverable look like and who will consume it?</inlineHelpText>
        <label>End state of the deliverable</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hiring_manager_s_personality__c</fullName>
        <inlineHelpText>Can you comment on the hiring manager’s personality and management style?</inlineHelpText>
        <label>Hiring manager’s personality</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Who_needs_to_receive_resumes__c</fullName>
        <inlineHelpText>Who needs to receive resumes?</inlineHelpText>
        <label>Who needs to receive resumes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Work_done_remotely_or_onsite__c</fullName>
        <inlineHelpText>Can any of this work be done remotely or do you need someone onsite?</inlineHelpText>
        <label>Work done remotely or onsite</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Close_Date_filled_placed_lost__c</fullName>
        <label>Close Date (filled, placed, lost)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Three_most_critical_skill_set__c</fullName>
        <inlineHelpText>What are the three most critical skill set requirements for this role?</inlineHelpText>
        <label>Three most critical skill set</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Accepted_Offer_Base_Comp_Salary__c</fullName>
        <label>Accepted Offer Base Comp Salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Do_Clients_Get_Weekly_Reporting__c</fullName>
        <label>Do Clients Get Weekly Reporting?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>yes</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Software_tools_proficiency_level__c</fullName>
        <inlineHelpText>What software tools is this person expected to utilize and at what proficiency level?</inlineHelpText>
        <label>Software tools proficiency level</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Considerations_for_coming_to_work__c</fullName>
        <inlineHelpText>What are some things that a strong candidate with multiple opportunities should be considering when weighing the option of coming to work at your company compared to other opportunities?</inlineHelpText>
        <label>Considerations for coming to work</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Position_Educational_Requirements__c</fullName>
        <label>Position Educational Requirements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Will_you_consider_converting_them__c</fullName>
        <inlineHelpText>If they do good work, when will you consider converting them?</inlineHelpText>
        <label>Will you consider converting them</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Estimated_duration_of_this_project__c</fullName>
        <inlineHelpText>What is the estimated duration of this project?</inlineHelpText>
        <label>Estimated duration of this project ?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Selling_aspects_of_the_Opportunity__c</fullName>
        <label>Selling aspects of the Opportunity</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>When_do_you_need_this_work_done_by__c</fullName>
        <label>When do you need this work done by ?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_would_you_assess_their_progress__c</fullName>
        <inlineHelpText>How would you assess their progress?</inlineHelpText>
        <label>How would you assess their progress?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Docusign_with_our_services_agreement__c</fullName>
        <inlineHelpText>We will send over a docusign with our services agreement.  Who should we address it to?</inlineHelpText>
        <label>Docusign with our services agreement</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Three_most_critical_responsibilities__c</fullName>
        <inlineHelpText>What are the three most critical responsibilities of this role?</inlineHelpText>
        <label>Three most critical responsibilities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discussion_with_resource_on_conference__c</fullName>
        <inlineHelpText>Are you comfortable making a decision on the resource from a conference call with myself and the resource we select?</inlineHelpText>
        <label>Discussion with resource on conference</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>When_do_you_want_someone_in_the_role_by__c</fullName>
        <label>When do you want someone in the role by?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <recordTypes>
        <fullName>Contract</fullName>
        <active>true</active>
        <businessProcess>Contract and Contract to Hire Sales Process</businessProcess>
        <label>Contract</label>
    </recordTypes>
    <recordTypes>
        <fullName>Direct_Hire</fullName>
        <active>true</active>
        <businessProcess>Direct Hire Sales Process</businessProcess>
        <label>Direct Hire</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contract_to_Hire</fullName>
        <active>true</active>
        <businessProcess>Contract and Contract to Hire Sales Process</businessProcess>
        <label>Contract to Hire</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contract_Currently_Billing</fullName>
        <active>true</active>
        <businessProcess>Contract and Contract to Hire Sales Process</businessProcess>
        <label>Contract Currently Billing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Direct_Hire_Closed_Placed_Won</fullName>
        <active>true</active>
        <businessProcess>Direct Hire Sales Process</businessProcess>
        <label>Direct Hire Closed-Placed-Won</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contract_to_Hire_Currently_Billing</fullName>
        <active>true</active>
        <businessProcess>Contract and Contract to Hire Sales Process</businessProcess>
        <label>Contract to Hire Currently Billing</label>
    </recordTypes>
</CustomObject>